# shell-shortcuts

./: Cargo.toml  README.md  justfile
i18n/en/: pop_shortcuts.ftl
res/: com.github.MyNameIs-13.CosmicPopShortcuts.desktop  com.github.MyNameIs-13.CosmicPopShortcuts.metainfo.xml
src/: app.rs  main.rs
