[package]
name = "pop-shortcuts"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
futures-util = "0.3.30"
i18n-embed-fl = "0.9.1"
once_cell = "1.19.0"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# Cargo deb
# Edit here to customize the package metadata
# Especially the Assets section
[package.metadata.deb]
maintainer = "MyNameIs-13, <g.s@writeme.com>"
copyright = "2024 MyNameIs-13"
# license-file = "LICENSE"
extended-description = """\
Shows keyboard shortcuts defined in POP!_OS. \
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/pop-shortcuts",
        "usr/bin/CosmicPopShortcuts",
        "755",
    ],
    [
        "res/com.github.MyNameIs-13.CosmicPopShortcuts.metainfo.xml",
        "usr/share/metainfo/com.github.MyNameIs-13.CosmicPopShortcuts.metainfo.xml",
        "644",
    ],
    [
        "res/com.github.MyNameIs-13.CosmicPopShortcuts.desktop",
        "usr/share/applications/com.github.MyNameIs-13.CosmicPopShortcuts.desktop",
        "644",
    ],
    [
        "res/icons/hicolor/",
        "usr/share/icons/hicolor/",
        "644",
    ],
]